# tradeflix-tools

./: .gitignore  fmp_cot.md
tools-backend/: .env.example  .gitignore  DATABASE_SETUP.md  README.md  RUN_SERVER.md  alembic.ini  config.py  database.py  main.py  pyproject.toml  requirements.txt  test_arbitrage_api.py  test_correlation_api.py  test_cot_api.py  test_pivot_api.py
tools-backend/alembic/: README  env.py
tools-backend/migrations/: populate_economic_events.sql  populate_economic_events_v2.sql  populate_recession_periods.sql
tools-backend/models/: __init__.py  alert.py  arbitrage.py  cot.py  metals.py  price.py  seasonal.py  strategy.py  user.py
tools-backend/schemas/: arbitrage.py  correlation.py  cot.py  pivot.py  seasonal.py  user.py  visual_backtest.py
tools-backend/scripts/: add_lunar_festivals.py  add_recession_events.py  check_strategies_table.py  check_user_table.py  csv_fix.py  debug_backtest.py  exchage_rates_historical.py  exchange_history.html  gold_spot_historical.py  gold_spot_ingest.py  gold_spot_test.py  gold_test.csv  gold_test_sample.csv  ingest_events.py  init_timescaledb.sql  metals_historical_usd_inr.csv  metals_historical_usd_inr_patched.csv  populate_arbitrage_history.py  test_db_connection.py  test_dhan_historical.py  usd_inr_timeseries.csv  verify_backtest.py
tools-backend/services/: arbitrage_service.py  backtest_engine.py  calc_service.py  correlation_service.py  cot_advanced_service.py  cot_service.py  indicators.py  metals_price_service.py  metals_price_service_optimized.py  metals_price_service_vectorized.py  (+4 more)
(+184 files in other folders)
