[project]
name = "tools-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "alembic>=1.17.1",
    "backtesting>=0.6.5",
    "celery>=5.5.3",
    "dhanhq>=2.0.2",
    "fastapi>=0.121.1",
    "fastapi-cors>=0.0.6",
    "flower>=2.0.1",
    "hiredis>=3.3.0",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "python-telegram-bot>=22.5",
    "pytz>=2025.2",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "sentry-sdk>=2.43.0",
    "sqlalchemy>=2.0.44",
    "ta-lib>=0.6.8",
    "uvicorn[standard]>=0.38.0",
    "yfinance>=0.2.66",
]
